# kami-blog

./: CLAUDE.md  LICENSE
content/posts/: akczentuaczii-haraktera.mdoc  chto-vidno-v-chyornoy-dyre.mdoc  domik-na-krayu-bezdny.mdoc  epistemizm-raeye.mdoc  estafeta-tsivilizatsiy.mdoc  forms-00-quick-start.mdoc  forms-01-why-forms-hurt.mdoc  forms-02-zod-meta.mdoc  forms-03-compound-components.mdoc  forms-04-all-fields.mdoc  forms-05-multistep.mdoc  forms-06-arrays-groups.mdoc  forms-07-from-schema.mdoc  forms-08-zenstack.mdoc  forms-09-offline.mdoc  forms-10-i18n.mdoc  forms-11-mcp.mdoc  forms-12-open-source.mdoc  forms-13-analytics.mdoc  forms-14-forms-as-state.mdoc  fotony-v-singulyarnosti.mdoc  kod-vselennoy-01.mdoc  lozhnoe-ya-lozhnoe-ego-lozhnaya-lichnost-kak-poluchit-i-chto-delat.mdoc  naskol-ko-mala-vidimaya-vselennaya.mdoc  padenie-v-chyornuyu-dyru.mdoc  pd-multiplier.mdoc  pescinka-tmy.mdoc  prostranstvo-kak-set-petel.mdoc  (+7 more)
pd_multiplier/: .gitignore  README.md  prepare_blog.py  pyproject.toml
pd_multiplier/analysis/: plots.py
pd_multiplier/engine/: __init__.py  action.py  game.py  multiplier.py  strategy.py
pd_multiplier/experiments/: common.py  exp1.py  exp2.py  exp3.py  exp4.py  exp5.py  run.py
pd_multiplier/output/: article.md  article_blog.md
pd_multiplier/output/data/: exp1_raw.csv  exp1_summary.csv  exp2_summary.csv  exp3_crossover.csv  exp3_summary.csv  exp4_cumulative.csv  exp5_evolution.csv
pd_multiplier/strategies/: __init__.py  basic.py  reactive.py
pd_multiplier/tests/: conftest.py  test_game.py  test_multiplier.py  test_strategies.py
(+4 files in other folders)
