[project]
name = "pd-multiplier"
version = "0.1.0"
description = "Повторяющаяся дилемма заключённого с множителем общего счёта"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "strategies*", "experiments*", "analysis*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
# Математические обозначения S, M, T, k — разрешаем имена с большой буквы.
ignore = ["N803", "N806", "N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
